@@ -2,6 +2,9 @@
 2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: added OrangeC version info
+	* warning.def: fixed grammar in warning descriptions
+	* cobc.c, flags.def: use "* " instead of "- " to better distinguish
+	  descriptions from options
 
 2018-04-26  Dave Pitts <dpitts@cozx.com>
 
